--- a/public/assets/css/inner.css
+++ b/public/assets/css/inner.css
@@ -1,127 +1,88 @@
-/*.position-relative {
-  width: 100%;
-  background:#ccc;
-  background-size: cover;
-  background-repeat: no-repeat;
-  position: relative;
-  color: #ffffff;
-}
-.position-relative:before {
-  background:#fff;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0px;
-  bottom: 0px;
-  content: "";
-  display: block;
-}*/
 
-.position-relative .top-header #menu span::before, #header .top-header #menu span::after{
-	background:#ccc !important;
-}
-.position-relative .top-header #menu span{
-	background:#ccc !important;
-}
-.position-relative .top-header {
-  margin-top: 20px;
-}
-.position-relative .top-header #menu {
-  display: block;
-  width: 24px;
-  height: 24px;
-  /*border: 1px solid #ffffff;*/
-  padding: 12px;
-  cursor: pointer;
-  float: right;
+.position-relative .top-header #menu span::before, #header .top-header #menu span::after {
+    background: #ccc none repeat scroll 0 0 !important;
 }
 .position-relative .top-header #menu span {
-  background-color: #ccc;
-  display: block;
-  font-size: 0px;
-  height: 3px;
-  margin-top: -1px;
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  transform: translateX(-50%);
-  width: 24px;
+    background: #ccc none repeat scroll 0 0 !important;
 }
-.position-relative .top-header #menu span:before,
-.position-relative .top-header #menu span:after {
-  background: #ccc;
-  content: "";
-  height: 100%;
-  left: 0;
-  position: absolute;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  width: 100%;
+.position-relative .top-header {
+    margin-top: 20px;
 }
-.position-relative .top-header #menu span:before {
-  -webkit-transform: translateY(-300%);
-  -moz-transform: translateY(-300%);
-  transform: translateY(-300%);
+.position-relative .top-header #menu {
+    cursor: pointer;
+    display: block;
+    float: right;
+    height: 24px;
+    padding: 12px;
+    width: 24px;
 }
-.position-relative .top-header #menu span:after {
-  -webkit-transform: translateY(300%);
-  -moz-transform: translateY(300%);
-  transform: translateY(300%);
+.position-relative .top-header #menu span {
+    background-color: #ccc;
+    display: block;
+    font-size: 0;
+    height: 3px;
+    margin-top: -1px;
+    transform: translateX(-50%);
+    width: 24px;
 }
-.position-relative .top-header #menu:hover span,
-.position-relative .top-header #menu:hover span:after,
-.position-relative .top-header #menu:hover span:before {
-  background: #086DB4 !important;
+.position-relative .top-header #menu span::before, .position-relative .top-header #menu span::after {
+    background: #ccc none repeat scroll 0 0;
+    content: "";
+    height: 100%;
+    left: 0;
+    position: absolute;
+    transition: all 0.3s ease 0s;
+    width: 100%;
+}
+.position-relative .top-header #menu span::before {
+    transform: translateY(-300%);
+}
+.position-relative .top-header #menu span::after {
+    transform: translateY(300%);
+}
+.position-relative .top-header #menu:hover span, .position-relative .top-header #menu:hover span::after, .position-relative .top-header #menu:hover span::before {
+    background: #086db4 none repeat scroll 0 0 !important;
 }
 .search-form .form-group {
-  float: right !important;
-  transition: all 0.35s, border-radius 0s;
-  width: 32px;
-  height: 32px;
-  background-color: #fff;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
-  border-radius: 25px;
-  border: 1px solid #ccc;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 25px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    float: right !important;
+    height: 32px;
+    transition: all 0.35s ease 0s, border-radius 0s ease 0s;
+    width: 32px;
 }
 .search-form .form-group input.form-control {
-  padding-right: 20px;
-  border: 0 none;
-  background: transparent;
-  box-shadow: none;
-  display:block;
-}
-.search-form .form-group input.form-control::-webkit-input-placeholder {
-  display: none;
+    background: transparent none repeat scroll 0 0;
+    border: 0 none;
+    box-shadow: none;
+    display: block;
+    padding-right: 20px;
 }
 .search-form .form-group input.form-control:-moz-placeholder {
-  /* Firefox 18- */
-  display: none;
+    display: none;
 }
 .search-form .form-group input.form-control::-moz-placeholder {
-  /* Firefox 19+ */
-  display: none;
+    display: none;
 }
-.search-form .form-group input.form-control:-ms-input-placeholder {
-  display: none;
-}
-.search-form .form-group:hover,
-.search-form .form-group.hover {
-  width: 100%;
-  border-radius: 4px 25px 25px 4px;
+.search-form .form-group:hover, .search-form .form-group.hover {
+    border-radius: 4px 25px 25px 4px;
+    width: 100%;
 }
 .search-form .form-group span.form-control-feedback {
-  position: absolute;
-  top: -1px;
-  right: -2px;
-  z-index: 2;
-  display: block;
-  width: 34px;
-  height: 34px;
-  line-height: 34px;
-  text-align: center;
-  color: #3596e0;
-  left: initial;
-  font-size: 14px;
+    color: #3596e0;
+    display: block;
+    font-size: 14px;
+    height: 34px;
+    left: initial;
+    line-height: 34px;
+    position: absolute;
+    right: -2px;
+    text-align: center;
+    top: -1px;
+    width: 34px;
+    z-index: 2;
 }
 .form_wrapper {
     background: #f6f6f6 none repeat scroll 0 0;
